--- a/style.css
+++ b/style.css
@@ -1,5 +1,51 @@
+@font-face {
+    font-family: 'HonokaShinMaruGothic';
+    src: url('fonts/Honoka-Shin-Maru-Gothic_R.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-color: #F9E9D4;
+    color: #452e25;
+} 
+
+html{
+    font-size: 100%;
+}
+
+h1 {
+    font-family: 'HonokaShinMaruGothic';
+}
+  
+
+header{
+    display: flex;
+    justify-content: space-between;
+    max-width: 1400px;
+    margin: 0 auto;
+    background-color: #F9E9D4;
+}
+
+ul{
+    display: flex;
+    margin-top: 28px;
+}
+
+li{
+    list-style: none;
+    margin: 30px;
+    margin-right: auto;
+    font-size: 16px;
+}
+
+a{
+    text-decoration: none;
+}
+
+header img{
+    max-width: 62.5%;
 }
