--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-@font-face {
-    font-family: 'HonokaShinMaruGothic';
-    src: url('fonts/Honoka-Shin-Maru-Gothic_R.otf') format('opentype');
-    font-weight: normal;
-    font-style: normal;
-}
-
 *{
     padding: 0;
     margin: 0;
@@ -17,8 +10,15 @@ html{
     font-size: 100%;
 }
 
-h1 {
+@font-face {
     font-family: 'HonokaShinMaruGothic';
+    src: url('../fonts/Honoka-Shin-Maru-Gothic_R.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+h1 {
+    font-family: 'HonokaShinMaruGothic', sans-serif;
 }
   
 
