--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,14 @@
     list-style: none;
     font-family: 'HonokaShinMaruGothic';
 }
+
+.en {
+    font-family: 'Lato', sans-serif;
+}
   
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
   
 body {
@@ -137,43 +142,41 @@ header img{
     width: 100%;
 }
 
-.mypattern .slick-slide{
-    margin: 5px;
-}
 
 .mypattern .slick-slide:not(.slick-center) {
-    -webkit-filter: opacity(70%);
-    -moz-filter: opacity(70%);
-    -o-filter: opacity(70%);
-    -ms-filter: opacity(70%);
-    filter: opacity(70%);
+    -webkit-filter: opacity(40%);
+    -moz-filter: opacity(40%);
+    -o-filter: opacity(40%);
+    -ms-filter: opacity(40%);
+    filter: opacity(40%);
     transition: 0.2s linear;
 }
 
 .slide-arrow {
-    background-color: #333;
+    background-color: #f9e9d4;
     bottom: 0;
     height: 0;
     margin: auto;
     position: absolute;
     top: 0;
-    width: 0;
+    width: 600px;
+    z-index: 3;
 }
 
 .prev-arrow {
-    border-bottom: 10px solid #333;
-    border-left: 0;
-    border-right: 10px solid #fff;
-    border-top: 10px solid #333;
-    left: -25px;
+    width: 30px;
+    height: 60px;
+    clip-path: polygon(100% 0, 0 50%, 100% 100%);
+    background-color: #a44a3f;
+    left: 20%;
 }
 
 .next-arrow {
-    border-bottom: 10px solid #333;
-    border-left: 10px solid #fff;
-    border-right: 0;
-    border-top: 10px solid #333;
-    right: -25px;
+    width: 30px;
+    height: 60px;
+    clip-path: polygon(0 0, 0% 100%, 100% 50%);
+    background-color: #a44a3f;
+    right: 20%;
 }
 
 button {
@@ -313,6 +316,29 @@ button {
     background-size: cover;
     width: 680px;
     height: 250px;
+    position: relative;
+}
+
+.kugi1 {
+    background-color: #d9d9d9;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    z-index: 3;
+}
+
+.kugi2 {
+    background-color: #d9d9d9;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 3;
 }
 
 h2 {
@@ -335,6 +361,7 @@ h2 {
     display: inline-block;
     width: 1080px;
     height: 250px;
+    position: relative;
 }
 
 .spetextbox p {
