--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     src: url('../fonts/Honoka-Shin-Maru-Gothic_R.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-} 
+}
 
 * {
     box-sizing: border-box;
@@ -16,19 +16,23 @@
 .en {
     font-family: 'Lato', sans-serif;
 }
-  
+
 html {
     height: 100%;
     scroll-behavior: smooth;
 }
-  
+
 body {
     height: 100%;
     margin: 0;
     background-color: #f9e9d4;
     color: #452e25;
 }
-  
+
+.sp {
+    display: none;
+}
+
 header {
     height: 80px;
     line-height: 80px;
@@ -39,25 +43,25 @@ header {
     width: 100vw;
     z-index: 1;
 }
-  
+
 header a {
     text-decoration: none;
     color: #452e25;
     font-size: 16px;
 }
-  
+
 header ul {
     display: flex;
     width: 800px;
     justify-content: space-between;
 }
-  
+
 ul {
     margin-block-start: 1em;
     margin-block-end: 1em;
     padding-inline-start: 40px;
 }
-  
+
 .firstview h1 {
     color: #452e25;
     font-size: 96px;
@@ -70,7 +74,7 @@ ul {
 .white {
     color: #ffffee;
 }
-  
+
 .bg {
     background-image: url(../img/bg1.jpg);
     width: 1160px;
@@ -81,7 +85,7 @@ ul {
     z-index: 1;
 }
 
-.bc{
+.bc {
     background-color: #f5cba7;
     width: 790px;
     height: 820px;
@@ -90,11 +94,42 @@ ul {
     left: 0;
 }
 
+@media screen and (max-width: 768px) {
+    header {
+        display: none;
+    }
+
+    .firstview h1 {
+        color: #ffffee;
+        font-size: 48px;
+        padding-top: 300px;
+        margin-left: 30px;
+    }
+
+    .bg {
+        background-image: url(../img/sp_bg.jpg);
+        width: 100vw;
+        height: 100vh;
+        background-repeat: no-repeat;
+        background-size: cover;
+        top: 0;
+    }
+
+    .bc {
+        width: 0;
+        height: 0;
+    }
+
+    .sp {
+        display: block;
+    }
+}
+
 .big-bg {
     height: 720px;
 }
 
-header img{
+header img {
     max-width: 50%;
 }
 
@@ -120,6 +155,17 @@ header img{
     line-height: 45px;
 }
 
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 30px;
+    }
+
+    .about_text {
+        font-size: 14px;
+        line-height: 30px;
+    }
+}
+
 .emphasis {
     text-emphasis: filled #452e25;
 }
@@ -138,10 +184,13 @@ header img{
     height: auto;
 }
 
-.mypattern{
+.mypattern {
     width: 100%;
 }
 
+.mypattern .slick-slide {
+    margin: 0;
+}
 
 .mypattern .slick-slide:not(.slick-center) {
     -webkit-filter: opacity(40%);
@@ -153,7 +202,6 @@ header img{
 }
 
 .slide-arrow {
-    background-color: #f9e9d4;
     bottom: 0;
     height: 0;
     margin: auto;
@@ -187,6 +235,39 @@ button {
     padding: 0;
 }
 
+@media screen and (max-width: 768px) {
+
+    .slick-slide img {
+        width: 240px;
+        margin-left: 13%;
+    }
+
+    .mypattern .slick-slide {
+        margin: 50px;
+    }
+
+    .prev-arrow {
+        width: 20px;
+        height: 40px;
+        left: 10%;
+    }
+    
+    .next-arrow {
+        width: 20px;
+        height: 40px;
+        right: 10%;
+    }
+
+    .mypattern .slick-slide:not(.slick-center) {
+        -webkit-filter: opacity(100%);
+        -moz-filter: opacity(100%);
+        -o-filter: opacity(100%);
+        -ms-filter: opacity(100%);
+        filter: opacity(100%);
+        transition: 0.2s linear;
+    }
+}
+
 .good {
     margin-top: 100px;
     background-image: url(../img/bg2.png);
@@ -203,6 +284,16 @@ button {
 .subtitle {
     padding-top: 60px;
     font-size: 32px;
+}
+
+@media screen and (max-width: 768px) {
+    .good {
+        height: 630px;
+    }
+
+    .subtitle {
+        font-size: 20px;
+    }
 }
 
 .husen1 {
@@ -295,6 +386,76 @@ button {
     right: 370px;
 }
 
+@media screen and (max-width: 768px) {
+    .pote {
+        font-size: 15px;
+    }
+
+    .husen1 img {
+        width: 300px;
+        top: 50px;
+        left: 50px;
+    }
+
+    .text1 {
+        position: absolute;
+        top: 65px;
+        left: 100px;
+    }
+
+    .husen2 img {
+        width: 300px;
+        top: 130px;
+        left: 50px;
+    }
+
+    .text2 {
+        width: 250px;
+        position: absolute;
+        top: 145px;
+        left: 100px;
+    }
+
+    .husen3 img {
+        width: 300px;
+        top: 210px;
+        left: 50px;
+    }
+
+    .text3 {
+        width: 250px;
+        position: absolute;
+        top: 225px;
+        left: 100px;
+    }
+
+    .husen4 img {
+        width: 300px;
+        top: 290px;
+        left: 50px;
+    }
+
+    .text4 {
+        width: 250px;
+        position: absolute;
+        top: 315px;
+        left: 100px;
+    }
+
+    .husen5 img {
+        width: 300px;
+        top: 370px;
+        left: 50px;
+    }
+
+    .text5 {
+        width: 250px;
+        position: absolute;
+        top: 385px;
+        left: 100px;
+    }
+}
+
 .active .title {
     padding-top: 75px;
 }
@@ -302,7 +463,9 @@ button {
 .box {
     display: flex;
     justify-content: center;
-    margin: 50px;
+    text-align: center;
+    align-items: center;
+    margin: 50px 0;
 }
 
 .box img {
@@ -371,6 +534,53 @@ h2 {
     margin-top: 17px;
 }
 
+@media screen and (max-width: 768px) {
+    .box {
+        flex-direction: column;
+        margin: 15px 0;
+    }
+
+    .box img {
+        width: 380px;
+    }
+
+    .textbox {
+        width: 380px;
+        height: 230px;
+    }
+
+    .h2 {
+        font-size: 20px;
+    }
+
+    .textbox p {
+        font-size: 16px;
+    }
+
+    .spetextbox {
+        width: 380px;
+        height: 300px;
+    }
+
+    .spetextbox p {
+        font-size: 16px;
+    }
+
+    .kugi1 {
+        width: 10px;
+        height: 10px;
+        top: 10px;
+        left: 10px;
+    }
+
+    .kugi2 {
+        width: 10px;
+        height: 10px;
+        top: 10px;
+        right: 10px;
+    }
+}
+
 .join {
     margin-top: 70px;
     background-color: #f5cba7;
@@ -431,6 +641,50 @@ h2 {
     z-index: 3;
 }
 
+@media screen and (max-width: 768px) {
+    .join {
+        height: 690px;
+    }
+
+    .all_text title {
+        text-align: center;
+    }
+
+    .accent {
+        width: 0;
+        height: 0;
+    }
+
+    .all_text {
+        margin-left: 60px;
+        padding-top: 60px;
+    }
+
+    .z2 {
+        width: 280px;
+        height: 231px;
+        top: 230px;
+        left: 35px;
+    }
+
+    .z3 {
+        width: 230px;
+        height: 182px;
+        top: 370px;
+        right: 40px;
+    }
+
+    .join_text {
+        text-align: left;
+        padding-top: 370px;
+        font-size: 16px;
+    }
+
+    .none {
+        display: none;
+    }
+}
+
 .qa {
     margin-top: 70px;
 }
@@ -480,6 +734,39 @@ h2 {
     margin-top: 40px;
 }
 
+@media screen and (max-width: 768px) {
+    .qa .title {
+        margin-left: 7%;
+    }
+
+    .ans {
+        margin-left: 5%;
+    }
+
+    .title_container {
+        text-align: center;
+    }
+
+    .qabox {
+        width: 90%;
+    }
+
+    .under {
+        width: 88%;
+        margin-left: 5%;
+    }
+
+    .q_text {
+        font-size: 16px;
+        margin-top: 5px;
+    }
+    
+    .a_text{
+        font-size: 16px;
+        margin-top: 20px;
+    }
+}
+
 footer {
     margin-top: 70px;
     background-color: #f5cba7;
@@ -508,4 +795,22 @@ footer {
 footer p {
     font-size: 20px;
     text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    footer {
+        margin-top: 40px;
+    }
+
+    .logo {
+        margin: 0 30%;
+    }
+
+    .logo img {
+        width: 30px;
+    }
+
+    footer p {
+        font-size: 12px;
+    }
 }
