--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header {
     z-index: 1;
 }
 
-header a {
+a {
     text-decoration: none;
     color: #452e25;
     font-size: 16px;
@@ -56,10 +56,83 @@ header ul {
     justify-content: space-between;
 }
 
-ul {
+header ul {
     margin-block-start: 1em;
     margin-block-end: 1em;
     padding-inline-start: 40px;
+}
+
+#menu{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+	z-index: 100;
+    display: none;
+}
+
+#menu div{
+	width: 60px;
+	height: 60px;
+	background: #a44a3f;
+	overflow: hidden;
+	position: absolute;
+	right: 0;
+}
+
+#menu .menuopen{
+	color: #ffffee;
+	font-size: 40px;
+	display: block;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 10px;
+	pointer-events: auto;
+}
+
+#menu .menuclose{
+	color: #ffffee;
+	font-size: 40px;
+	display: none;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 20px;
+	pointer-events: auto;
+}
+
+#menu ul{
+	background: #ffffee;
+	width: 100%;
+	position: absolute;
+	top: 60px;
+	right: 0;
+	display: none;
+}
+
+#menu li{
+	padding: 10px;
+	color: #452e25;
+	border-bottom: 1px #555353 solid;
+    margin-bottom: -1px;
+	pointer-events: auto;
+}
+
+#menu:target .menuopen{
+	display: none;
+}
+
+#menu:target .menuclose{
+	display: block;
+}
+
+#menu:target ul{
+	display: block;
 }
 
 .firstview h1 {
@@ -121,6 +194,10 @@ ul {
     }
 
     .sp {
+        display: block;
+    }
+
+    #menu {
         display: block;
     }
 }
@@ -784,7 +861,11 @@ h2 {
     
     .a_text{
         font-size: 16px;
-        margin-top: 18px;
+        margin-top: 23px;
+    }
+
+    .a_sp {
+        margin-top: 30px;
     }
 }
 
