--- a/css/style.css
+++ b/css/style.css
@@ -699,8 +699,8 @@ h2 {
     background-color: #a44a3f;
     border-radius: 10px;
     position: absolute;
-    top: 45px;
-    left: 640px;
+    top: 7%;
+    left: 45%;
     z-index: 1;
 }
 
